<resources>
    <string name="app_name">appdev3demo</string>
    <string name="action_settings">Settings</string>
    <string name="search">SEARCH</string>
    <string name="edit">Edit</string>
    <string name="phone_number">Phone Number:</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="EDIT">EDIT</string>
    <string name="namE">NAME</string>
    <string name="numbeR">NUMBER:</string>
    <string name="nameE">Name:</string>
    <string name="numbER">Number:</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="phone">PHONE:</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="edit_pic">Edit Pic</string>
    <string name="add_contac">ADD CONTACT</string>
</resources>
