<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nameE"
        android:id="@+id/textView"
        android:layout_marginLeft="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numbER"
        android:id="@+id/textView2"
        android:layout_marginLeft="30sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameAdd"
        android:hint="@string/enter_name"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/numberAdd"
        android:hint="@string/enter_number"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/nameAdd"
        android:layout_alignStart="@+id/nameAdd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:id="@+id/addContact"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/addData" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Pic"
        android:id="@+id/choose"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/numberAdd" />

</RelativeLayout>