<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="NAME:"
        android:id="@+id/textView"
        android:layout_marginTop="57dp"
        android:layout_marginLeft="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEdit"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/numberEdit"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/numberEdit"
        android:layout_below="@+id/nameEdit"
        android:layout_alignLeft="@+id/nameEdit"
        android:layout_alignStart="@+id/nameEdit" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_edit"
        android:id="@+id/confirm"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView3"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/numberEdit"
        android:layout_toLeftOf="@+id/confirm"
        android:layout_toStartOf="@+id/confirm" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_pic"
        android:id="@+id/editPic"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/confirm"
        android:layout_toEndOf="@+id/confirm" />

</RelativeLayout>